# crunchstore

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
crunchstore/: apps.py  asgi.py  wsgi.py
crunchstore/models/: category.py  customer.py  order.py  order_item.py  product.py  product_resource.py  store.py  user.py
crunchstore/settings/: base.py  production.py
