[tool.poetry]
name = "crunchstore"
version = "0.1.0"
description = "A basic ecommerce SASS application"
authors = ["Santosh Kumar Patro <patrosantoshkumar1212@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.13.0"
boto3 = "^1.24.47"
shortuuid = "^1.0.9"
razorpay = "^1.3.0"
stripe = "^4.0.2"
httpx = "^0.23.0"
pyotp = "^2.6.0"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
